# create-mongo-app

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/create_mongo_app/: __init__.py  cli.py  generate.py
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/api/: sockets.py
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: login.py  proxy.py  users.py
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/core/: config.py
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/crud/: crud_token.py  crud_user.py
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/db/: init_db.py  session.py
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/email-templates/src/: reset_password.mjml
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/schemas/: token.py
src/create_mongo_app/template/{{cookiecutter.project_slug}}/backend/app/app/utilities/: email.py
tests/: test_generate.py
